history page finished, may add more eventually

--- a/src/app/animals/animals.component.html
+++ b/src/app/animals/animals.component.html
@@ -1,3 +1,11 @@
-<p>
-  animals works!
-</p>
+<div>
+  <h1>Welcome to the animal forum - Post about your pets here!</h1>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Check out top stories from each of our forums</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>Include image and forum post{{title}}</p>
+    </mat-card-content>
+  </mat-card>
+</div>
