--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,3 +1,11 @@
-<p>
-  books works!
-</p>
+<div>
+  <h1>Welcome to the book forum - Grab a cup of coffee and talk about your favourite books!</h1>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Check out top stories from each of our forums</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>Include image and forum post{{title}}</p>
+    </mat-card-content>
+  </mat-card>
+</div>
