--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,8 +25,8 @@
       <span>Animals</span>
     </button>
   </mat-menu>
-  <button mat-raised-button color="accent" matTooltip="History of Forum World!">Forum History</button>
-  <button mat-raised-button color="warn" matTooltip="Page to learn about how to use forum">Support</button>
+  <button mat-raised-button color="accent" matTooltip="History of Forum World!" [routerLink]="['/forumHistory']">Forum History</button>
+  <button mat-raised-button color="warn" matTooltip="Page to learn about how to use forum" [routerLink]="['/support']">Support</button>
 </mat-toolbar>
 <div id="content">
   <h1>Hottest posts from our forums</h1>
@@ -35,8 +35,9 @@
       <mat-card-title>Check out top stories from each of our forums</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <p>Include image and forum post here for top post of each forum</p>
+      <p>Include image and forum post here for top post of each forum{{title}}</p>
     </mat-card-content>
   </mat-card>
 </div>
+<h2>{{forumTitle}}</h2>
 <router-outlet></router-outlet>
