--- a/src/app/general-discussions/general-discussions.component.html
+++ b/src/app/general-discussions/general-discussions.component.html
@@ -1,3 +1,11 @@
-<p>
-  general-discussions works!
-</p>
+<div>
+  <h1>General Discussions forum - For a good relaxing chat :)</h1>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Check out top stories from each of our forums</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>Include image and forum post{{title}}</p>
+    </mat-card-content>
+  </mat-card>
+</div>
