--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -1,3 +1,11 @@
-<p>
-  history works!
-</p>
+<div>
+  <h1>History forum - Tell us all about your favourite historical period!</h1>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Check out top stories from each of our forums</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>Include image and forum post{{title}}</p>
+    </mat-card-content>
+  </mat-card>
+</div>
