--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,3 +1,11 @@
-<p>
-  movies works!
-</p>
+<div>
+  <h1>Movie Forum - Bust out the popcorn!</h1>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Check out top stories from each of our forums</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>Include image and forum post{{title}}</p>
+    </mat-card-content>
+  </mat-card>
+</div>
