--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -1,3 +1,41 @@
-<p>
-  support works!
-</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Support</mat-card-title>
+    <mat-card-subtitle>We're here for you</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    Here at Forum World we take our users very seriously when they address us
+    with a problem and we try to offer the best solutions available.
+
+    Below we have listed some common problems, or you can send your own in
+    the box provided below.
+  </mat-card-content>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Bad posts</mat-card-title>
+    <mat-card-subtitle>What do I do about bad posts?</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    Forum World is a 100% free speech zone and if you don't like a post you can
+    hide it.
+  </mat-card-content>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>How can I suggest new features?</mat-card-title>
+    <mat-card-subtitle>We really need them!</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    We read posts from time to time, so you can suggest them on any forum.
+  </mat-card-content>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Which forum is the best?</mat-card-title>
+    <mat-card-subtitle>Completely biased and shouldn't be here</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    Obviously the history forum DUH!!
+  </mat-card-content>
+</mat-card>
