Forum history page updated need to adjust margins for image.

--- a/src/app/forum-history/forum-history.component.html
+++ b/src/app/forum-history/forum-history.component.html
@@ -1,38 +1,75 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>The Beginning</mat-card-title>
-    <mat-card-subtitle>It had to start somewhere...</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    Forum world started as a place for people to connect with each other based on
-    their interests. We decided to expand on our forums with a variety of different
-    message boards to cater for different personalities.
-  </mat-card-content>
-  <img mat-card-image src="http://www.dailyhawker.com/wp-content/uploads/2018/08/Happy-Hobbies-15-Leisure-Activities-to-Make-You-Smile-MainPhoto.jpg" alt="a picture of hobbies">
-</mat-card>
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>The Middle</mat-card-title>
-    <mat-card-subtitle>We remain committed</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    We remain committed to development of Forum World and on expanding it's influence.
-    We have clear goals on where we want the website to go in the future and we have
-    ideas for new features and extensions. Forum World appreciates it's supporters
-    as well as it's critics thank you so much for your continued support.
-  </mat-card-content>
-  <img mat-card-image src="http://blog.thebalanceofhealth.com/wp-content/uploads/2015/09/middle-of-road.jpg" alt="a picture of middle of road">
-</mat-card>
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>The end</mat-card-title>
-    <mat-card-subtitle>Not anytime soon(hopefully!)</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    Forum World has no time of stopping our service anytime soon! We will continue
-    to bring you our great posts from users like you. We hope you enjoy this site
-    and will continue visiting us in the future! We also hope you will share
-    this website with your friends and help grow our userbase :).
-  </mat-card-content>
-  <img mat-card-image src="https://blog.recruitloop.com/wp-content/uploads/2014/05/The-end-of-the-line.jpg" alt="End of train track">
-</mat-card>
+<div id="tier1">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>The Beginning</mat-card-title>
+      <mat-card-subtitle>It had to start somewhere...</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      Forum world started as a place for people to connect with each other based on
+      their interests. We decided to expand on our forums with a variety of different
+      message boards to cater for different personalities.
+    </mat-card-content>
+    <img mat-card-image src="http://www.dailyhawker.com/wp-content/uploads/2018/08/Happy-Hobbies-15-Leisure-Activities-to-Make-You-Smile-MainPhoto.jpg" alt="a picture of hobbies">
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>The Middle</mat-card-title>
+      <mat-card-subtitle>We remain committed</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      We remain committed to development of Forum World and on expanding it's influence.
+      We have clear goals on where we want the website to go in the future and we have
+      ideas for new features and extensions. Forum World appreciates it's supporters
+      as well as it's critics thank you so much for your continued support.
+    </mat-card-content>
+    <img mat-card-image src="http://blog.thebalanceofhealth.com/wp-content/uploads/2015/09/middle-of-road.jpg" alt="a picture of middle of road">
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>The end</mat-card-title>
+      <mat-card-subtitle>Not anytime soon(hopefully!)</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      Forum World has no time of stopping our service anytime soon! We will continue
+      to bring you our great posts from users like you. We hope you enjoy this site
+      and will continue visiting us in the future! We also hope you will share
+      this website with your friends and help grow our userbase :).
+    </mat-card-content>
+    <img mat-card-image src="https://blog.recruitloop.com/wp-content/uploads/2014/05/The-end-of-the-line.jpg" alt="End of train track">
+  </mat-card>
+</div>
+<div id="tier2">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>The beggining is only the start</mat-card-title>
+      <mat-card-subtitle>Constant improvement</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      We are still in our infancy who knows what the future will hold. We might
+      even make a profit!
+    </mat-card-content>
+    <img mat-card-image src="https://www.trademarksandbrandsonline.com/media/image/dovapi.jpg" alt="Sunrise">
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>The journey(NOT THE BAND!) is more important than the end or the start</mat-card-title>
+      <mat-card-subtitle>We need you</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      We need you to continue to frequent our forums to ensure that we maintain
+      longevity :).
+    </mat-card-content>
+    <img mat-card-image src="https://thedistinctdot.files.wordpress.com/2018/04/journey.jpg" alt="Journey">
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>The end can be a new beginning</mat-card-title>
+      <mat-card-subtitle>Although we won't stop anytime soon</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      Sometimes the end may mean more features and services we can provide to you,
+      the user.
+    </mat-card-content>
+    <img mat-card-image src="https://mythicscribes.com/wp-content/uploads/2015/02/Phoenix.jpg" alt="Phoenix">
+  </mat-card>
+</div>
