--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -39,3 +39,26 @@
     Obviously the history forum DUH!!
   </mat-card-content>
 </mat-card>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>What's the best way to contact you?</mat-card-title>
+    <mat-card-subtitle>Contact details</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    Input your querys/suggestions in the box below and that will send us an email.
+  </mat-card-content>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Who runs the forums?</mat-card-title>
+    <mat-card-subtitle>Who owns the forum</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    Forums are maintained by independent owners and sustained by users like you.
+  </mat-card-content>
+</mat-card>
+<h2>Submit your complaints/queries here:</h2>
+<textarea placeholder="Queries/Complaints for devteam">
+</textarea>
+<br>
+<button mat-raised-button color="accent" matTooltip="Submit to dev team">Submit</button>
