--- a/src/app/support/support.component.css
+++ b/src/app/support/support.component.css
@@ -2,3 +2,9 @@ mat-card{
   margin-bottom: 2%;
   border: 3px solid black;
 }
+textarea{
+  resize: none;
+  height: 200px;
+  width: 50%;
+  margin-bottom: 2%;
+}
