--- a/src/app/forum-history/forum-history.component.css
+++ b/src/app/forum-history/forum-history.component.css
@@ -1,22 +1,22 @@
 mat-card-header{
-  font-size: 20px;
+  font-size: 22px;
   font-weight: bold;
   font-family: sans-serif;
 }
 mat-card-subtitle{
-    font-size: 10px;
+    font-size: 14px;
     font-weight: bold;
     font-family: sans-serif;
 }
 mat-card-content{
-  font-size: 12px;
+  font-size: 18px;
   font-weight: bold;
   font-family: sans-serif;
 }
 mat-card{
     border: 10px solid black;
     margin-bottom: 30%;
-    height: 500px;
+    height: 700px;
     width: 500px;
 }
 #tier1{
@@ -33,6 +33,11 @@ mat-card{
 }
 img{
   height: 300px;
-  width: 100%;
-  margin-left: 0.5%;
+  width: 500px;
+  /*
+  *center the images
+  *for aesthetics
+  */
+  margin-left: auto;
+  margin-right: auto;
 }
