--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,10 +40,10 @@
     </mat-card-content>
   </mat-card>
 </div>
-<button mat-raised-button color = "accent" onclick = "showPost()">Make post</button>
-<form id = "postArea" hidden = "true">
+<button mat-raised-button color = "accent" (click) = "showPost()">Make post</button>
+<form id = "postArea" *ngIf="hideElement">
+  <h3>Enter posts here:</h3>
   <mat-form-field id = "postTitle">
-    <h3>Enter posts here:</h3>
     <textarea matInput placeholder="Enter post title: "></textarea>
   </mat-form-field>
   <mat-form-field>
