--- a/src/app/general-discussions/general-discussions.component.html
+++ b/src/app/general-discussions/general-discussions.component.html
@@ -1,11 +1,13 @@
 <div>
   <h1>General Discussions forum - For a good relaxing chat :)</h1>
-  <mat-card>
+  <form (submit)="onAddPost(postForm)">
+  <mat-card *ngFor = "let post of posts">
     <mat-card-header>
-      <mat-card-title>Check out top stories from each of our forums</mat-card-title>
+      <mat-card-title>{{post.title}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <p>Include image and forum post{{title}}</p>
+      <p>{{post.content}}</p>
     </mat-card-content>
   </mat-card>
+</form>
 </div>
