--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,6 +12,8 @@ mat-form-field,textarea{
   height: 100%;
 }
 #postArea{
-  border: 2px solid black;
   margin-bottom: 2%;
+}
+#title,#post{
+  resize: none;
 }
