--- a/src/app/forum-history/forum-history.component.css
+++ b/src/app/forum-history/forum-history.component.css
@@ -1,15 +1,15 @@
 mat-card-header{
-  font-size: 22px;
+  font-size: 1em;
   font-weight: bold;
   font-family: sans-serif;
 }
 mat-card-subtitle{
-    font-size: 14px;
+    font-size: 1.4em;
     font-weight: bold;
     font-family: sans-serif;
 }
 mat-card-content{
-  font-size: 18px;
+  font-size: 1em;
   font-weight: bold;
   font-family: sans-serif;
 }
@@ -22,6 +22,7 @@ mat-card{
 #tier1{
   float: left;
   width:50%;
+  margin-right: 50%;
 }
 /*
 *Tier 1 and tier2 for mat card layout
@@ -32,7 +33,7 @@ mat-card{
   margin-left:50%;
 }
 img{
-  height: 300px;
+  height: 200px;
   width: 500px;
   /*
   *center the images
