--- a/src/app/general-discussions/general-discussions.component.html
+++ b/src/app/general-discussions/general-discussions.component.html
@@ -1,11 +1,20 @@
 <div>
+  
   <h1>General Discussions forum - For a good relaxing chat :)</h1>
-  <mat-card *ngFor = "let post of posts">
-    <mat-card-header>
-      <mat-card-title>{{post.title}}</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <p>{{post.content}}</p>
-    </mat-card-content>
-  </mat-card>
-</div>
+
+  <h2>Right into the conversation!</h2>
+  <!-- modify this for project*******-->
+  <mat-accordion multi="true" *ngIf="posts.length > 0">
+    <mat-expansion-panel [expanded]="true" *ngFor="let post of posts">
+      <mat-expansion-panel-header>
+        {{ post.title }}
+      </mat-expansion-panel-header>
+      <p>{{ post.content }}</p>
+      <mat-action-row>
+        <button mat-button [routerLink]="['/edit', post._id]" color="primary">EDIT</button>
+        <button mat-button (click)="onDelete(post._id)" color="warn">DELETE</button>
+      </mat-action-row>
+    </mat-expansion-panel>
+  </mat-accordion>
+  <p class="info-text mat-body-1" *ngIf="posts.length <= 0">No posts added yet!</p>
+  
