--- a/src/app/general-discussions/general-discussions.component.html
+++ b/src/app/general-discussions/general-discussions.component.html
@@ -1,5 +1,5 @@
 <div>
-  
+
   <h1>General Discussions forum - For a good relaxing chat :)</h1>
 
   <h2>Right into the conversation!</h2>
@@ -17,4 +17,16 @@
     </mat-expansion-panel>
   </mat-accordion>
   <p class="info-text mat-body-1" *ngIf="posts.length <= 0">No posts added yet!</p>
-  
+  <button mat-raised-button color="accent" (click)="showPost()" id="postButton">{{postText}}</button>
+    <form (submit)="onAddPost(postForm)" #postForm="ngForm" id = "postArea" *ngIf="hideElement"> 
+      <h3>Enter posts here:</h3>
+      <mat-form-field id="postTitle">
+        <textarea matInput placeholder="Enter post title: " name="title" id="title" ngModel required #title="ngModel"
+          rows="4"></textarea>
+      </mat-form-field>
+      <mat-form-field>
+        <textarea matInput placeholder="Enter post content: " id="post" name="content" ngModel required #content="ngModel"
+          rows="4"></textarea>
+      </mat-form-field>
+      <button mat-raised-button color="accent" type="submit">Submit Post</button>
+    </form>
