--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,11 +1,31 @@
 <div>
   <h1>Welcome to the book forum - Grab a cup of coffee and talk about your favourite books!</h1>
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Check out top stories from each of our forums</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <p>Include image and forum post{{title}}</p>
-    </mat-card-content>
-  </mat-card>
-</div>
+  <div>
+    <!-- modify this for project*******-->
+    <mat-accordion multi="true" *ngIf="posts.length > 0">
+      <mat-expansion-panel [expanded]="true" *ngFor="let post of posts">
+        <mat-expansion-panel-header>
+          {{ post.title }}
+        </mat-expansion-panel-header>
+        <p>{{ post.content }}</p>
+        <mat-action-row>
+          <button mat-button [routerLink]="['/edit', post._id]" color="primary">EDIT</button>
+          <button mat-button (click)="onDelete(post._id)" color="warn">DELETE</button>
+        </mat-action-row>
+      </mat-expansion-panel>
+    </mat-accordion>
+    <p class="info-text mat-body-1" *ngIf="posts.length <= 0">No posts added yet!</p>
+    <button mat-raised-button color="accent" (click)="showPost()" id="postButton">{{postText}}</button>
+    <form (submit)="onAddPost(postForm)" #postForm="ngForm" id="postArea" *ngIf="hideElement">
+      <h3>Enter posts here:</h3>
+      <mat-form-field id="postTitle">
+        <textarea matInput placeholder="Enter post title: " name="title" id="title" ngModel required #title="ngModel"
+          rows="4"></textarea>
+      </mat-form-field>
+      <mat-form-field>
+        <textarea matInput placeholder="Enter post content: " id="post" name="content" ngModel required #content="ngModel"
+          rows="4"></textarea>
+      </mat-form-field>
+      <button mat-raised-button color="accent" type="submit">Submit Post</button>
+    </form>
+  </div>
