Sectioned off each forums posts so that only specific forum posts are shown in each section.

--- a/src/app/general-discussions/general-discussions.component.css
+++ b/src/app/general-discussions/general-discussions.component.css
@@ -8,3 +8,7 @@ mat-form-field,textarea{
   #title,#post{
     resize: none;
   }
+  mat-card{
+    margin-bottom: 2%;
+    border: 4px solid black;
+  }
