--- a/src/styles.css
+++ b/src/styles.css
@@ -29,11 +29,20 @@ h1{
     font-style:italic;
 
 }
-[hidden] { display: none !important;}
 #postArea{
     margin-bottom: 2%;
   }
+  /*for forums*/
   mat-card{
     margin-bottom: 2%;
     border: 4px solid black;
+  }
+  mat-form-field,textarea{
+    margin: 2%;
+    width: 200%;
+    height: 100%;
+  }
+  
+  #title,#post{
+    resize: none;
   }
