--- a/src/app/animals/animals.component.html
+++ b/src/app/animals/animals.component.html
@@ -11,8 +11,8 @@
           <p>{{ post.content }}</p>
         </mat-card-content>
         <mat-action-row>
-          <button mat-button [routerLink]="['/edit', post._id]" color="primary">EDIT</button>
-          <button mat-button (click)="onDelete(post._id)" color="warn">DELETE</button>
+          <button mat-button [routerLink]="['/update', post._id]" color="primary">EDIT</button>
+          <button mat-button (click)="onDelete(post._id)" color="warn">DELETE POST</button>
         </mat-action-row>
       </mat-card>
     </div>
