--- a/src/app/general-discussions/general-discussions.component.html
+++ b/src/app/general-discussions/general-discussions.component.html
@@ -13,7 +13,7 @@
           <p>{{ post.content }}</p>
         </mat-card-content>
         <mat-action-row>
-          <button mat-button [routerLink]="['/edit', post._id]" color="primary">EDIT</button>
+          <button mat-button [routerLink]="['/update', post._id]" color="primary">EDIT</button>
           <button mat-button (click)="onDelete(post._id)" color="warn">DELETE</button>
         </mat-action-row>
       </mat-card>
