--- a/src/app/animals/animals.component.html
+++ b/src/app/animals/animals.component.html
@@ -3,18 +3,16 @@
 <mat-accordion multi="true" *ngIf="posts.length > 0">
   <div *ngFor="let post of posts">
     <div *ngIf="post.category == 'Animals'">
-      <mat-card>
-        <mat-card-title>
-          {{ post.title }}
-        </mat-card-title>
-        <mat-card-content>
-          <p>{{ post.content }}</p>
-        </mat-card-content>
-        <mat-action-row>
-          <button mat-button [routerLink]="['/update', post._id]" color="primary">EDIT</button>
-          <button mat-button (click)="onDelete(post._id)" color="warn">DELETE POST</button>
-        </mat-action-row>
-      </mat-card>
+ <mat-expansion-panel [expanded]="true">
+    <mat-expansion-panel-header>
+      {{ post.title }}
+    </mat-expansion-panel-header>
+    <p>{{ post.content }}</p>
+    <mat-action-row>
+      <button mat-button [routerLink]="['/edit', post._id]" color="primary">EDIT</button>
+      <button mat-button (click)="onDelete(post._id)" color="warn">DELETE</button>
+    </mat-action-row>
+  </mat-expansion-panel>
     </div>
   </div>
 </mat-accordion>
