Gworked on edit function, works but has error with post not being found

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
     <mat-card>
         <h2>{{forumTitle}}</h2>
         <mat-card-content>
-          <img mat-card-image src="../../Images/banner.jpg" alt="a picture of the jungle" height="400px" width="300px">
+          <img mat-card-image src="../../Images/banner.jpg" alt="a picture of our banner" height="400px" width="300px">
         </mat-card-content>
       </mat-card>
     </div>
