--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,31 +1,11 @@
-<mat-card>
-  <form (submit)="editPosts(postForm)" #postForm="ngForm">
-    <mat-form-field>
-      <input
-        matInput
-        type="text"
-        name="title"
-        ngModel={{post.title}}
-        required
-        #title="ngModel"
-        placeholder="Enter post title: " 
-        >
-    </mat-form-field>
-    <mat-form-field>
-      <textarea
-        matInput
-        rows="4"
-        name="content"
-        ngModel={{post.content}}
-        required
-        #content="ngModel"
-        placeholder="Enter post content: ">
+<form (submit)="editPosts(postForm)" #postForm="ngForm">
+  <mat-form-field>
+    <input matInput type="text" name="title" ngModel={{post.title}} required #title="ngModel" placeholder="Enter post title: ">
+  </mat-form-field>
+  <mat-form-field>
+    <textarea matInput rows="4" name="content" ngModel={{post.content}} required #content="ngModel" placeholder="Enter post content: ">
       </textarea>
-      <mat-error *ngIf="content.invalid">Please enter a post title.</mat-error>
-    </mat-form-field>
-    <button
-      mat-raised-button
-      color="accent"
-      type="submit">Update Post</button>
-  </form>
-</mat-card>
+    <mat-error *ngIf="content.invalid">Please enter a post title.</mat-error>
+  </mat-form-field>
+  <button mat-raised-button color="accent" type="submit">Update Post</button>
+</form>
