--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,11 +1,12 @@
 <form (submit)="editPosts(postForm)" #postForm="ngForm">
   <mat-form-field>
     <input matInput type="text" name="title" ngModel={{post.title}} required #title="ngModel" placeholder="Enter post title: " maxlength="20" minlength="5">
+    <mat-error *ngIf="content.invalid">Please enter a post title > 5 characters</mat-error>
   </mat-form-field>
   <mat-form-field>
     <textarea matInput rows="4" name="content" ngModel={{post.content}} required #content="ngModel" placeholder="Enter post content: " maxlength="50" minlength="5">
       </textarea>
-    <mat-error *ngIf="content.invalid">Please enter a post title.</mat-error>
+      <mat-error *ngIf="content.invalid">Please enter post content > 5 characters.</mat-error>
   </mat-form-field>
   <button mat-raised-button color="accent" type="submit">Update Post</button>
 </form>
