--- a/src/app/general-discussions/general-discussions.component.html
+++ b/src/app/general-discussions/general-discussions.component.html
@@ -25,10 +25,12 @@
   <mat-form-field id="postTitle">
     <textarea matInput placeholder="Enter post title: " name="title" id="title" ngModel required #title="ngModel" rows="4"
       minlength="5" maxlength="20"></textarea>
+      <mat-error *ngIf="content.invalid">Please enter a post title > 5 characters</mat-error>
   </mat-form-field>
   <mat-form-field>
     <textarea matInput placeholder="Enter post content: " name="content" ngModel required #content="ngModel" rows="4"
       minlength="5" maxlength="50"></textarea>
+      <mat-error *ngIf="content.invalid">Please enter a post content > 5 characters</mat-error>
   </mat-form-field>
   <button mat-raised-button color="accent" type="submit">Submit Post</button>
 </form>
