--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -23,10 +23,12 @@
     <mat-form-field id="postTitle">
       <textarea matInput placeholder="Enter post title: " name="title" id="title" ngModel #title="ngModel" rows="4"
         required minlength="5" maxlength="20"></textarea>
+        <mat-error *ngIf="content.invalid">Please enter a post title > 5 characters</mat-error>
     </mat-form-field>
     <mat-form-field>
       <textarea matInput placeholder="Enter post content: " name="content" ngModel #content="ngModel" rows="4" required
         minlength="5" maxlength="50"></textarea>
+        <mat-error *ngIf="content.invalid">Please enter a post content > 5 characters</mat-error>
     </mat-form-field>
     <button mat-raised-button color="accent" type="submit">Submit Post</button>
   </form>
