--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -62,10 +62,12 @@
   <mat-form-field id="postTitle">
     <textarea matInput placeholder="Enter subject of complaint: " name="title" id="title" ngModel required #title="ngModel"
       rows="4" minlength="5" maxlength="20"></textarea>
+      <mat-error *ngIf="content.invalid">Please enter a post title > 5 characters</mat-error>
   </mat-form-field>
   <mat-form-field>
     <textarea matInput placeholder="Enter details of complaint: " name="content" ngModel required #content="ngModel"
       rows="4" minlength="5" maxlength="50"></textarea>
+      <mat-error *ngIf="content.invalid">Please enter a post content > 5 characters</mat-error>
   </mat-form-field>
   <br>
   <button mat-raised-button color="accent" matTooltip="Submit to dev team">Submit</button>
